<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sceen.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMenu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_baseline_menu_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/murakkablik_darajasi"
               android:textColor="@color/black"
               android:textSize="24sp" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:orientation="horizontal">

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btn1"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:backgroundTint="@color/gray"
                   android:text="1"
                   android:textColor="@color/black"
                   android:textSize="24sp"
                   app:cornerRadius="8dp" />

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btn2"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_margin="8dp"
                   android:backgroundTint="@color/gray"
                   android:text="2"
                   android:textColor="@color/black"
                   android:textSize="24sp"
                   app:cornerRadius="8dp" />

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btn3"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:backgroundTint="@color/gray"
                   android:text="3"
                   android:textColor="@color/black"
                   android:textSize="24sp"
                   app:cornerRadius="8dp" />
           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:text="@string/misollar_soni"
               android:textColor="@color/black"
               android:textSize="24sp"
               android:textStyle="bold|italic" />

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="60dp"
               app:hintTextColor="@color/black"
               android:hint="@string/misollar_soni">

               <EditText
                   android:id="@+id/editmisol"
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:inputType="number" />
           </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:text="@string/qatorlar_soni"
               android:textColor="@color/black"
               android:textSize="24sp"
               android:textStyle="bold|italic" />

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:hint="@string/qatorlar_soni">

               <EditText
                   android:id="@+id/editqator"
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:inputType="number" />
           </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:text="@string/ajratilgan_vaqt"
               android:textColor="@color/black"
               android:textSize="24sp"
               android:textStyle="bold|italic" />

           <com.google.android.material.textfield.TextInputLayout
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               android:layout_width="match_parent"
               android:layout_height="60dp">

               <AutoCompleteTextView
                   android:id="@+id/autoCompleteProviceType"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="none" />
           </com.google.android.material.textfield.TextInputLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:orientation="horizontal">
               <com.airbnb.lottie.LottieAnimationView
                   android:layout_width="0dp"
                   android:layout_height="100dp"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:id="@+id/animation_down"
                   app:lottie_rawRes="@raw/download"
                   app:lottie_autoPlay="true"
                   app:lottie_loop="true"/>
               <com.airbnb.lottie.LottieAnimationView
                   android:layout_width="0dp"
                   android:layout_height="100dp"
                   android:scaleY="1.2"
                   android:layout_marginTop="4dp"
                   android:layout_marginLeft="8dp"
                   android:layout_weight="1"
                   android:scaleType="centerCrop"
                   android:gravity="center"
                   android:id="@+id/animation_start"
                   app:lottie_rawRes="@raw/startbutton"
                   app:lottie_autoPlay="true"
                   app:lottie_loop="true"/>
           </LinearLayout>
       </LinearLayout>

   </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</FrameLayout>